added new citations

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,12 +27,73 @@
       <span class="logo_text">{{ title }}</span>
     {% endif %}
   </a>
+
   <nav class="nav_row">
     {%- assign pages = site.pages | where_exp: "page", "page.nav" | sort: "nav.order" -%}
     {%- for page in pages -%}
-      {%- if page.nav -%}
-        {%- include link.html type="link" text=page.title tooltip=page.nav.tooltip link=page.dir -%}
-      {%- endif -%}
+    {%- if page.nav -%}
+    {%- include link.html type="link" text=page.title tooltip=page.nav.tooltip link=page.dir -%}
+    {%- endif -%}
     {%- endfor -%}
   </nav>
+<!--  <nav>-->
+<!--    <ul>-->
+<!--      {% for entry in site.data.navigation %}-->
+<!--      {% if entry.url == current_page %}-->
+<!--      &lt;!&ndash; uses yellow, you can change to any other hexadecimal colour code. &ndash;&gt;-->
+<!--      {% assign current = ' style="background-color: #FFFFFF"' %}-->
+<!--      {% else %}-->
+<!--      &lt;!&ndash; We have to declare it 'null' to ensure it doesn't propagate. &ndash;&gt;-->
+<!--      {% assign current = null %}-->
+<!--      {% endif %}-->
+<!--      {% assign sublinks = entry.sublinks %}-->
+<!--      {% if sublinks %}-->
+<!--      <li {{ current }}>-->
+<!--      <a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a>-->
+<!--      <ul>-->
+<!--        {% for sublink in sublinks %}-->
+<!--        <li><a href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a></li>-->
+<!--        {% endfor %}-->
+<!--      </ul>-->
+<!--      </li>-->
+<!--      {% else %}-->
+<!--      <li {{ current }}><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a></li>-->
+<!--      {% endif %}-->
+<!--      {% endfor %}-->
+<!--    </ul>-->
+<!--  </nav>-->
+
+<!--  <nav id="navbar" class="collapse navbar-collapse">-->
+<!--    <ul class="nav navbar-nav">-->
+<!--      {% assign links = site.data.navigation %}-->
+<!--      {% for link in links %}-->
+<!--      {% assign class = nil %}-->
+<!--      {% if page.url contains link.url %}-->
+<!--      {% assign class = 'active' %}-->
+<!--      {% endif %}-->
+<!--      {% if link.sublinks %}-->
+<!--      <li class="dropdown {{ class }}">-->
+<!--        <a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}" class="dropdown-toggle" data-toggle="dropdown"-->
+<!--           role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>-->
+<!--        <ul class="dropdown-menu">-->
+<!--          {% for sublink in link.sublinks %}-->
+<!--          {% if sublink.title == 'separator' %}-->
+<!--          <li role="separator" class="divider"></li>-->
+<!--          {% else %}-->
+<!--          <li>-->
+<!--            <a href="{{ site.url }}{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>-->
+<!--          </li>-->
+<!--          {% endif %}-->
+<!--          {% endfor %}-->
+<!--        </ul>-->
+<!--      </li>-->
+<!--      {% else %}-->
+<!--      <li class="{{ class }}">-->
+<!--        <a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>-->
+<!--      </li>-->
+<!--      {% endif %}-->
+<!--      {% endfor %}-->
+<!--    </ul>-->
+<!--  </nav>-->
+
 </header>
