--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -1,14 +1,14 @@
 <!-- https://realfavicongenerator.net/ -->
 <link
   rel="apple-touch-icon"
-  sizes="180x180"
-  href="{{ 'favicons/ios.png' | relative_url }}"
+  sizes="48x48"
+  href="{{ 'favicons/favicon.ico' | relative_url }}"
 />
 <link
   rel="icon"
-  type="image/png"
-  sizes="512x512"
-  href="{{ 'favicons/favicon.png' | relative_url }}"
+  type="image/ico"
+  sizes="48x48"
+  href="{{ 'favicons/favicon.ico' | relative_url }}"
 />
 <link rel="manifest" href="{{ 'favicons/site.webmanifest' | relative_url }}" />
 
