--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -15,9 +15,9 @@
 <!-- https://metatags.io/ -->
 <meta
   property="og:image"
-  content="{{ 'favicons/share-thumbnail.jpg' | relative_url }}"
+  content="{{ 'favicons/share-thumbnail.png' | relative_url }}"
 />
 <meta
   property="twitter:image"
-  content="{{ 'favicons/share-thumbnail.jpg' | relative_url }}"
+  content="{{ 'favicons/share-thumbnail.png' | relative_url }}"
 />
